--- a/_data/data.yml
+++ b/_data/data.yml
@@ -16,28 +16,25 @@ sidebar:
     phone: +65 9647 6439
     linkedin: fong-keith
     github: lexzt
-    twitter: '@webjeda'
-    stack-overflow: # Number/Username, e.g. 123456/alandoe
-    codewars:
 
     languages:
       - idiom: English
         level: Native
 
-      - idiom: French
-        level: Professional
-
-      - idiom: Spanish
-        level: Professional
+      - idiom: Chinese
+        level: Basic
         
     interests:
-      - item: Climbing
-        link:
-
-      - item: Snowboarding
+      - item: Games Development
         link:
 
       - item: Cooking
+        link:
+
+      - item: Contract Bridge
+        link:
+
+      - item: Entrepreneurship
         link:
 
 career-profile:
@@ -52,9 +49,9 @@ career-profile:
       Second paragraph if required.
 
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
+    - degree: BSc in Computer Science
+      university: National University of Singapore
+      time: 2017 - Present
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -65,9 +62,9 @@ education:
           - Bullet point
           - Bullet point 
 
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
-      time: 2007 - 2011
+    - degree: Digital Entertainment Technology (Games)
+      university: Nanyang Polytechinc
+      time: 2012 - 2015
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -79,8 +76,8 @@ education:
           - Bullet point 
 
 experiences:
-    - role: Lead Developer
-      time: 2015 - Present
+    - role: Part-time Programmer
+      time: June 2017 - Aug 2017
       company: Startup Hubs, San Francisco
       details: |
         Describe your role here lorem ipsum dolor sit amet, consectetuer
