--- a/_data/data.yml
+++ b/_data/data.yml
@@ -78,8 +78,14 @@ education:
 experiences:
     - role: Part-time Programmer
       time: June 2017 - Aug 2017
-      company: Startup Hubs, San Francisco
+      company: Anacle Systems, Singapore
       details: |
+        Transformed the loading of enormous CAD models into Unity using a 
+        threaded workflow, boosting performance by 40%. Hosted a WAMP server to 
+        dynamically download large models and patches to streamline workflow 
+        for customers.
+
+        
         Describe your role here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
         Cum sociis natoque penatibus et magnis dis parturient montes,
@@ -93,9 +99,9 @@ experiences:
           - Bullet point
           - Bullet point 
 
-    - role: Senior Software Engineer
-      time: 2014 - 2015
-      company: Google, London
+    - role: Junior Programmer
+      time: May 2016 - May 2017
+      company: RoyceMedia Techonlogies, Singapore
       details: |
         Describe your role here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -106,9 +112,9 @@ experiences:
           - Bullet point
           - Bullet point
 
-    - role: UI Developer
-      time: 2012 - 2014
-      company: Amazon, London
+    - role: Intern
+      time: March 2014 - July 2014
+      company: Critical Force Entertainment, Finland
       details: |
         Describe your role here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
