--- a/_data/data.yml
+++ b/_data/data.yml
@@ -16,6 +16,7 @@ sidebar:
     phone: +65 9647-6439
     linkedin: fong-keith
     github: lexzt
+    resume: testing
 
     languages:
       - idiom: English
