--- a/_data/data.yml
+++ b/_data/data.yml
@@ -5,7 +5,8 @@
 sidebar:
     about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
-
+    skills: True
+    
     # Profile information
     name: Keith Fong
     tagline: Full Stack Developer
@@ -53,8 +54,10 @@ career-profile:
       I also participate with school activities. I was the captain of the computing 
       contract bridge team for the Inter-faculty games and the head of logistics for 
       an orientation camp for about 400 students, where I handled transports and 
-      equipments to their respective location. I am currently working on my own
-      startup during my free time as I believe there is always room to improve.
+      equipments to their respective location. 
+      
+      I am currently working on my own startup during my free time to further 
+      improve myself.
 
 education:
     - degree: BSc in Computer Science
