--- a/_data/data.yml
+++ b/_data/data.yml
@@ -5,7 +5,6 @@
 sidebar:
     about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: True # set to False if you want education in main section instead of in sidebar
-    skills: True
     
     # Profile information
     name: Keith Fong
@@ -17,7 +16,6 @@ sidebar:
     phone: +65 9647-6439
     linkedin: fong-keith
     github: lexzt
-    stack-overflow: testing
 
     languages:
       - idiom: English
@@ -58,6 +56,8 @@ career-profile:
       
       I am currently working on my own startup during my free time to further 
       improve myself.
+
+      [Resume](https://www.dropbox.com/)
 
 education:
     - degree: BSc in Computer Science
