--- a/_data/data.yml
+++ b/_data/data.yml
@@ -57,7 +57,7 @@ career-profile:
       I am currently working on my own startup during my free time to further 
       improve myself.
 
-      [Resume](https://www.dropbox.com/)
+      You can download my [resume here](https://drive.google.com/open?id=1QyQ_SpxunYYllH1qUAerhUpMzsA-v9rW).
 
 education:
     - degree: BSc in Computer Science
