--- a/_data/data.yml
+++ b/_data/data.yml
@@ -68,7 +68,7 @@ education:
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
         sociis natoque penatibus et magnis dis parturient montes, nascetur
         ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
-        pretium quis, sem.
+        pretium quis, sem. testing
           - Bullet point
           - Bullet point 
 
