--- a/_data/data.yml
+++ b/_data/data.yml
@@ -172,8 +172,20 @@ skills:
       - name: HTML & CSS
         level: 60%
 
+      - name: Ionic
+        level: 60%
+
       - name: Javascript
         level: 50%
 
+      - name: Unreal Engine 4
+        level: 50%
+
       - name: PHP
+        level: 40%
+
+      - name: React
+        level: 40%
+
+      - name: AngularJS
         level: 40%
